Changelog
=========


2.0.2 - Unreleased
------------------

- Add MANIFEST.in.
  [WouterVH]

- Add metadata.xml to profile.
  [WouterVH]


2.0.1 - 2011-01-03
------------------

- Add Site Administrator to the default roles for the
  "plone.portlet.static: Add static portlet" permission, for forward
  compatibility with Plone 4.1.
  [davisagli]


2.0 - 2010-07-18
----------------

- Removed the deprecated `hide` option form the portlet.
  [hannosch]

- Update license to GPL version 2 only.
  [hannosch]


2.0b2 - 2010-02-17
------------------

- Removed the transformation cache from the portlet renderer. Portal transforms
  doesn't actually work with the assignment class as a cache context.
  This closes http://dev.plone.org/plone/ticket/10167.
  [hannosch]


2.0b1 - 2009-12-02
------------------

- Removed Kupu as a testing dependency. In Plone 4 the tests work with the
  default TinyMCE transforms.
  [hannosch]


2.0a2 - 2009-11-18
------------------

- Removed reference to non-existent profile in plone.app.portlets.
  [hannosch]


2.0a1 - 2009-11-13
------------------

- Remove the "hide" option as this is now available to all portlets (PLIP 9286)
  [igbun]

- Adjusted test setup to Plone 5.
  [hannosch]

- Added the z3c.autoinclude entry point so this package is automatically loaded
  on Plone 3.3 and above.
  [hannosch]

- Declare test dependencies in an extra.
  [hannosch]

- Specify package dependencies.
  [hannosch]

- Added 'tile' CSS class to the links within dt.portletHeader and 
  dd.portletFooter for static portlet's template
  [spliter]


1.2.1 - 2009-11-25
------------------

- Fixed a syntax error introduced in the last change.
  [hannosch]


1.2 - 2009-11-25
----------------

- Ensure that text output is passed through the safe-html transform to protect
  against malicious text. This also ensures the resolve uid behavior works when
  only TinyMCE and not Kupu is installed.
  [hannosch]

- Removed msgids in portlets.xml. There is no support for